--- a/Back-End/pom.xml
+++ b/Back-End/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>activation</artifactId>
             <version>1.1.1</version><!-- Use the latest version -->
         </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.34.0</version>
+        </dependency>
 
 
     </dependencies>
