--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.servlet.multipart.max-request-size= 100MB
 
 #Jwt Setup
 jwtSecret=hcmute999
-jwtExpirationMs=3600000
+jwtExpirationMs=180000
 jwtCookieName=naturezen
 
 #Mail Setup
