--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/nature_zen
-spring.datasource.username=natureAdmin
-spring.datasource.password=abc123
+spring.datasource.username=root
+spring.datasource.password=vickpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 
@@ -26,7 +26,7 @@ jwtCookieName=naturezen
 #Mail Setup
 spring.mail.host=smtp.googlemail.com
 spring.mail.port=587
-spring.mail.username=contact.lwind@gmail.com
-spring.mail.password=spjsofwwiuecogmw
+spring.mail.username=contact.vick7dev@gmail.com
+spring.mail.password=rwswfqpwzfchkelq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
