--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/nature_zen
+spring.datasource.url=jdbc:mysql://localhost:3306/ogani
 spring.datasource.username=nature_db
 spring.datasource.password=abc123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
