--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/ogani
-spring.datasource.username=nature_db
-spring.datasource.password=abc123
+spring.datasource.username=root
+spring.datasource.password=luong251102
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 
